tests/NormalTests/paczka1/fuzzy1/98270973.err
Error in line 8: spaq A961 29,5
Error in line 10: spaq S191 77,5
Error in line 12: A961 S834 121,30
Error in line 11: spaq S834 85,7
Error in line 1: A961 S834 60,2
Error in line 13: spaq A961 82,4
Error in line 18: fspP S191 55,8
Error in line 16: spaq S191 20,6
Error in line 24: spaq S834 31,5
Error in line 27: spaq S191 14,1
Error in line 26: jNt1a A961 69,0
